--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "puppeteer": "^2.1.1",
+    "random-fake-useragent": "^0.1.0",
     "request": "^2.88.0"
   }
 }
